--- a/layout.html
+++ b/layout.html
@@ -27,7 +27,7 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="{{ url_for('index') }}">FollowTheFood</a>
+              <a class="navbar-brand" href="{{ url_for('index') }}"><h3>FollowTheFood</h3></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -102,8 +102,6 @@
     <footer>
 		<div class='footer-main'>
 			<div class='socmedia-icons'>
-                <a href="">
-                    <img src='https://i.postimg.cc/QFg3mZQ0/twitter-round-1.png' class='socmedia'> </a>
 				<a href="https://www.facebook.com/">
                     <img src='https://i.postimg.cc/1fqPgqfx/facebook-round-1.png' class='socmedia'> </a>
                 <a href="https://www.instagram.com/_followthefood_/">
